--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Beetroot</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=PT+Serif&display=swap" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
 
