--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </blockquote>
 
     <h2>Common varieties</h2>
-    <ol>
+    <ol class="varieties">
       <li>Albino</li>
       <li>Bull’s Blood</li>
       <li>Chioggia</li>
